--- a/web/package.json
+++ b/web/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.15",
+    "axios": "^1.7.2",
     "date-fns": "^3.3.1",
+    "js-cookie": "^3.0.5",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.2",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "sass": "^1.71.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.56",
     "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^18.2.19",
